[gd_scene load_steps=3 format=3]

[ext_resource type="PackedScene" uid="uid://ctwabcdef01234" path="res://scenes/desktop/tool_window.tscn" id="1_tw"]
[ext_resource type="Script" path="res://scenes/tools/trace_tracker.gd" id="2_tt"]

[node name="TraceTracker" instance=ExtResource("1_tw")]
custom_minimum_size = Vector2(320, 160)
script = ExtResource("2_tt")

[node name="Margin" type="MarginContainer" parent="ContentArea"]
layout_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="ContentArea/Margin"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="StatusLabel" type="Label" parent="ContentArea/Margin/VBox"]
text = "TRACE STATUS:  INACTIVE"

[node name="TracePct" type="Label" parent="ContentArea/Margin/VBox"]
text = "TRACE:  0%"

[node name="TraceBar" type="ProgressBar" parent="ContentArea/Margin/VBox"]
show_percentage = false
value = 0

[node name="ChainLabel" type="Label" parent="ContentArea/Margin/VBox"]
text = "ROUTE:  â€”"
autowrap_mode = 2
